<resources>
    <string name="app_name">Easynvest Challenge</string>

    <string name="currency_dev_placeholder" translatable="false">R$ 0.00</string>
    <string name="percent_dev_placeholder"  translatable="false">0.00%</string>
    <string name="number_dev_placeholder"  translatable="false">0</string>
    <string name="taxers_dev_placeholder"  translatable="false">R$ 0.00 (17.56%)</string>

    <string name="investment_amount_input">Quanto você gostaria de aplicar? *</string>
    <string name="investment_due_date_input">Qual a data de vencimento do investimento? *</string>
    <string name="cdi_index_rate_input">Qual o percentual do CDI do investimento? *</string>
    <string name="investment_amount_hint">R$</string>
    <string name="investment_due_date_hint">dia/mês/ano</string>
    <string name="cdi_index_rate_hint">100%</string>
    <string name="confirm_simulation_button">Simular</string>
    <string name="something_went_wrong">Parece que algo deu errado… Quer tentar novamente?</string>

    <string name="simulation_result_label">Resultado da Simulação</string>
    <string name="gross_amount_profit_big_label">Rendimento total de %1$s</string>
    <string name="invested_amount_label">Valor investido inicialmente</string>
    <string name="gross_amount_label">Valor bruto do investimento</string>
    <string name="gross_amount_profit_label">Valor do rendimento</string>
    <string name="taxes_label">IR sobre o investimento</string>
    <string name="net_amount_profit_label">Valor líquido do investimento</string>
    <string name="maturity_date_label">Data de resgate</string>
    <string name="maturity_total_days_label">Dias corridos</string>
    <string name="monthly_gross_rate_profit">Rendimento mensal</string>
    <string name="taxes_rate">Percentual do CID do investimento</string>
    <string name="annual_gross_rate_profit">Rentabilidade anual</string>
    <string name="rate_profit_label">Rentabilidade do período</string>
    <string name="simulate_again_button">Simular Novamente</string>
</resources>
